3.6.0 (September 18th, 2024)

- Upgrade express from 4.19.2 to 4.20.0 due to a vulnerability
- Upgrade body-parser dep from 1.18.3 to 1.20.3 due to a vulnerability
- Upgrade iotagent-node-lib dependency from 4.5.0 to 4.6.0

3.5.0 (June 11th, 2024)

- Fix: update device using previous device apikey to avoid error when apikey is updated (iota-json#833)
- Fix: allow send multiple measures to CB in a batch (POST /v2/op/update) and sorted by TimeInstant when possible, instead of using multiples single request (iotagent-json#825, iotagent-node-lib#1612)
- Fix: default express limit to 1Mb instead default 100Kb and allow change it throught a conf env var 'IOTA_EXPRESS_LIMIT' (iota-json#827)
- Upgrade iotagent-node-lib dependency from 4.4.0 to 4.5.0

 3.4.0 (April 26th, 2024)

- Upgrade express dep from ~4.16.4 to 4.19.2 due to a vulnerability
- Upgrade iotagent-node-lib dependency from 4.2.0 to 4.3.0

3.3.0 (February 27th, 2024)

- Add: log and return device/group information when DeviceNotFound and GroupNotFound errors (iotagent-json#815)
- Fix: default attribute type changed from 'string' to 'Text' (#664)
- Upgrade iotagent-node-lib dependency from 4.2.0 to 4.3.0

3.2.0 (January 30th, 2024)

- Upgrade iotagent-node-lib dependency from 4.1.0 to 4.2.0

3.1.0 (January 8th, 2024)

- Add: check and usage endpoint and transport from Group level when commands
- Upgrade iotagent-node-lib dependency from 4.0.0 to 4.1.0

3.0.0 (November 24th, 2023)

- Fix: ensure service and subservice from device in logs about error proccesing message
- Fix: remove autocast (iotagent-node-lib#1498)
- Upgrade iotagent-node-lib dependency from 3.4.0 to 4.0.0
- Remove: local mergeDeviceWithConfiguration redefined from iota-node-lib (#642)

2.4.0 (Sep 20th, 2023)

- Fix: try to use apikey from measure/group to find, update and remove device in first attempt (iota-node-lib#1426)
- Fix: ensure device apikey in already provisioned device (iota-node-lib#1430, iota-node-lib#1435)