@@ -46,6 +46,11 @@ let context = {
     op: 'IOTAUL.HTTP.Binding'
 };
 
+function reqTiming(req, res, next) {
+    req.startTime = Date.now();
+    next();
+}
+
 /* eslint-disable-next-line no-unused-vars */
 function handleError(error, req, res, next) {
     let code = 500;
@@ -198,6 +203,7 @@ function returnCommands(req, res, next) {
 
     if (req.query && req.query.getCmd === '1') {
         iotAgentLib.commandQueue(req.device.service, req.device.subservice, req.deviceId, function (error, list) {
+            res.set(constants.X_PROCESSING_TIME, Date.now() - req.startTime + ' ms ');
             if (error || !list || list.count === 0) {
                 res.set('Content-Type', 'text/plain');
                 res.status(200).send('');
@@ -209,6 +215,7 @@ function returnCommands(req, res, next) {
         });
     } else {
         res.set('Content-Type', 'text/plain');
+        res.set(constants.X_PROCESSING_TIME, Date.now() - req.startTime + ' ms ');
         res.status(200).send('');
     }
 }
@@ -477,6 +484,7 @@ function start(callback) {
 
     httpBindingServer.app.set('port', config.getConfig().http.port);
     httpBindingServer.app.set('host', config.getConfig().http.host || '0.0.0.0');
+    httpBindingServer.app.use(reqTiming);
 
     httpBindingServer.router.get(
         config.getConfig().iota.defaultResource || constants.HTTP_MEASURE_PATH,
