@@ -53,5 +53,7 @@ module.exports = {
     AMQP_DEFAULT_QUEUE: 'iotaqueue',
     AMQP_DEFAULT_DURABLE: true,
     AMQP_DEFAULT_RETRIES: 5,
-    AMQP_DEFAULT_RETRY_TIME: 5
+    AMQP_DEFAULT_RETRY_TIME: 5,
+
+    X_PROCESSING_TIME: 'X-Processing-Time'
 };
